--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ span{
 }
 /* header style end */
 /* main style */
+
 .div-section{
     width:900px;
     height:660px;
@@ -73,8 +74,7 @@ span{
 .div-description{
     display:flex;
     justify-content: space-around;
-    width:1900px;
-    height:5500px;
+
 }
 .head-1{
   font-size: 40px;
@@ -111,4 +111,29 @@ span{
     border-radius: 30px;
     color:#fff;
     
+}
+.game-description{
+    text-align: center;
+   
+    
+}
+.head-part{
+    font-size:40px;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.game-img{
+    display:flex;
+    justify-content:center ;
+    padding:0 230px;
+    gap:24px;
+    margin-top:50px;
+}
+.p-1{
+    width:340px;
+    font-size:18px;
+    font-weight: 400;
+    color:#534c64;
+    line-height:25px;
 }
