--- a/style.css
+++ b/style.css
@@ -137,3 +137,41 @@ span{
     color:#534c64;
     line-height:25px;
 }
+/* download section style */
+.download-section{
+    display: flex;
+    padding:100px 240px;
+    gap:200px;
+}
+.header-decorate{
+    text-align:right;
+    font-size: 48px;
+    font-weight: 800;
+    margin-left:300px;
+    margin-top: 200px;
+    line-height: 60px;
+}
+.p-decorate{
+    text-align: right;
+    font-size: 20px;
+    font-weight: 500;
+    color:#534c64;
+    line-height: 30px;
+    margin-left:400px ;
+    
+}
+.image-size img{
+    height: 70%;
+   
+  
+}
+.rectangle-img{
+    position:relative;
+    bottom:200px;
+    right:100px;
+    width:315px;
+    height:400px;
+    border-radius:5px;
+    
+
+}
