--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ span{
 /* download section style */
 .download-section{
     display: flex;
-    padding:100px 240px;
+    padding:50px 240px;
     gap:200px;
 }
 .header-decorate{
@@ -174,4 +174,63 @@ span{
     border-radius:5px;
     
 
+}
+.Gaming-section{
+    display: flex;
+    justify-content: space-around;
+    padding-bottom:200px;
+   
+   
+}
+.img-png{
+    display: flex;
+    gap:20px;
+}
+.img-png:hover{
+    width:200px;
+    height:50px;
+    border:2px solid #ff42a5;
+    border-radius:25px;
+    color:#f948b2;
+}
+.footer-section{
+    width:100%;
+    height: 600px;
+    background-color:#0B0223;
+    color:#fff;
+    display:grid;
+}
+.footer-1{
+    display: flex;
+    justify-content: center;
+    padding-top: 100px;
+    gap:20px;
+    font-size:20px;
+}
+.footer-2{
+    /* display: flex; */
+    list-style: none;
+    justify-content: center;
+    display:inline-flex;
+    padding:30px;
+    align-items:flex-start;
+    gap:60px;
+}
+.footer-3{
+    display: flex;
+    list-style: none;
+    justify-content: center;
+    gap:60px;
+    color:#fff;
+    font-size: 45px;
+}
+.footer-4{
+    display: flex;
+    list-style: none;
+    justify-content: center;
+    gap:60px;
+}
+.footer-5{
+    display:flex;
+    justify-content: center; 
 }
